--- a/remote.css
+++ b/remote.css
@@ -37,7 +37,7 @@
 
       * {
         pointer-events: none;
-        background-color: transparent;
+        background-color: transparent !important;
       }
 
       body {
