--- a/remote.css
+++ b/remote.css
@@ -46,7 +46,7 @@
         cursor: none;
         overflow: hidden;
         background-color: #3beabd !important;
-        background-image: url('https://i.gifer.com/yB.gif');
+        background-image: url('https://i.imgur.com/rHykg6j.gif');
         background-size: 100% auto;
         background-position: fixed;
         background-repeat: no-repeat;
